# pip-sbom

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
src/pip_sbom/: __init__.py
src/pip_sbom/_internal/: cli.py  dists.py
src/pip_sbom/_internal/formatters/: cyclonedx1_json.py  cyclonedx_json.py  spdx2_json.py  spdx_json.py
src/pip_sbom/_internal/sources/: dist_info.py  pep710.py  pip_report.py
